--- a/enHueco/Views/Base.lproj/Main.storyboard
+++ b/enHueco/Views/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="15A282a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="EVy-Ep-XAz">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8187.4" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="EVy-Ep-XAz">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8151.3"/>
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -1311,7 +1311,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0OU-mb-5lt">
                                 <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mi Perfil" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gmh-Ms-6ZF">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mi Perfil" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gmh-Ms-6ZF">
                                         <rect key="frame" x="-42" y="-21" width="42" height="21"/>
                                         <animations/>
                                         <constraints>
@@ -1333,6 +1333,31 @@
                                             </mask>
                                         </variation>
                                     </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q3w-G8-chG">
+                                        <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="68" id="Lqr-vd-E0y"/>
+                                            <constraint firstAttribute="height" constant="30" id="mur-Ce-8T9"/>
+                                        </constraints>
+                                        <state key="normal" title="Log out">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <variation key="default">
+                                            <mask key="constraints">
+                                                <exclude reference="Lqr-vd-E0y"/>
+                                                <exclude reference="mur-Ce-8T9"/>
+                                            </mask>
+                                        </variation>
+                                        <variation key="heightClass=regular-widthClass=compact">
+                                            <mask key="constraints">
+                                                <include reference="Lqr-vd-E0y"/>
+                                                <include reference="mur-Ce-8T9"/>
+                                            </mask>
+                                        </variation>
+                                        <connections>
+                                            <action selector="settingsButtonPressed:" destination="CS5-RI-5GR" eventType="touchUpInside" id="fH4-NL-7xY"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <animations/>
                                 <color key="backgroundColor" red="0.0" green="0.63425268310000005" blue="0.52588851120000002" alpha="1" colorSpace="calibratedRGB"/>
@@ -1342,25 +1367,33 @@
                                     </constraint>
                                     <constraint firstAttribute="bottom" secondItem="Gmh-Ms-6ZF" secondAttribute="bottom" constant="9" id="BJi-rk-SN2"/>
                                     <constraint firstItem="Gmh-Ms-6ZF" firstAttribute="centerX" secondItem="0OU-mb-5lt" secondAttribute="centerX" id="H5W-nR-xAs"/>
+                                    <constraint firstAttribute="bottom" secondItem="Q3w-G8-chG" secondAttribute="bottom" constant="-8" id="Jd8-fQ-vUi"/>
+                                    <constraint firstAttribute="trailing" secondItem="Q3w-G8-chG" secondAttribute="trailing" constant="8" id="k2g-fL-n67"/>
                                 </constraints>
                                 <variation key="default">
                                     <mask key="subviews">
                                         <exclude reference="Gmh-Ms-6ZF"/>
+                                        <exclude reference="Q3w-G8-chG"/>
                                     </mask>
                                     <mask key="constraints">
                                         <exclude reference="68Q-7z-1rV"/>
                                         <exclude reference="BJi-rk-SN2"/>
                                         <exclude reference="H5W-nR-xAs"/>
+                                        <exclude reference="Jd8-fQ-vUi"/>
+                                        <exclude reference="k2g-fL-n67"/>
                                     </mask>
                                 </variation>
                                 <variation key="heightClass=regular-widthClass=compact">
                                     <mask key="subviews">
                                         <include reference="Gmh-Ms-6ZF"/>
+                                        <include reference="Q3w-G8-chG"/>
                                     </mask>
                                     <mask key="constraints">
                                         <include reference="68Q-7z-1rV"/>
                                         <include reference="BJi-rk-SN2"/>
                                         <include reference="H5W-nR-xAs"/>
+                                        <include reference="Jd8-fQ-vUi"/>
+                                        <include reference="k2g-fL-n67"/>
                                     </mask>
                                 </variation>
                             </view>
@@ -1650,6 +1683,7 @@
                         <outlet property="appUserQRImageView" destination="orn-qt-bTs" id="SVS-qq-TFm"/>
                         <outlet property="editScheduleButton" destination="iIb-rX-ZiU" id="xeI-hW-Wut"/>
                         <outlet property="firstNamesLabel" destination="SHI-vm-BDJ" id="iwb-fD-TFV"/>
+                        <outlet property="imageImageView" destination="6vg-Pd-LeT" id="6gS-t2-gRs"/>
                         <outlet property="lastNamesLabel" destination="alX-40-PUO" id="pHd-WR-sJx"/>
                         <outlet property="usernameLabel" destination="s6v-HT-3ju" id="xQU-pz-WHA"/>
                     </connections>
@@ -1714,8 +1748,12 @@
                                 <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
                                 <animations/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="140" id="R0f-35-riV"/>
-                                    <constraint firstAttribute="width" constant="140" id="sK2-Lc-b6P"/>
+                                    <constraint firstAttribute="height" constant="140" id="R0f-35-riV">
+                                        <variation key="heightClass=regular-widthClass=compact" constant="99"/>
+                                    </constraint>
+                                    <constraint firstAttribute="width" constant="140" id="sK2-Lc-b6P">
+                                        <variation key="heightClass=regular-widthClass=compact" constant="99"/>
+                                    </constraint>
                                 </constraints>
                                 <variation key="default">
                                     <mask key="constraints">
@@ -1734,8 +1772,12 @@
                                 <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
                                 <animations/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="140" id="NdQ-7c-4VD"/>
-                                    <constraint firstAttribute="width" constant="140" id="gQu-pL-EdN"/>
+                                    <constraint firstAttribute="height" constant="140" id="NdQ-7c-4VD">
+                                        <variation key="heightClass=regular-widthClass=compact" constant="100"/>
+                                    </constraint>
+                                    <constraint firstAttribute="width" constant="140" id="gQu-pL-EdN">
+                                        <variation key="heightClass=regular-widthClass=compact" constant="100"/>
+                                    </constraint>
                                 </constraints>
                                 <variation key="default">
                                     <mask key="constraints">
@@ -1830,22 +1872,26 @@
                             </constraint>
                             <constraint firstItem="XCe-7V-xeo" firstAttribute="height" secondItem="K5c-Uw-coe" secondAttribute="height" id="Dc2-mc-Ege"/>
                             <constraint firstItem="VFS-xg-f4Z" firstAttribute="centerX" secondItem="bec-18-6zT" secondAttribute="centerX" id="Fmf-Qo-G8A">
-                                <variation key="heightClass=regular-widthClass=compact" constant="8"/>
+                                <variation key="heightClass=regular-widthClass=compact" constant="0.0"/>
                             </constraint>
                             <constraint firstAttribute="trailing" secondItem="L0S-sa-JPw" secondAttribute="trailing" id="HX3-5F-4g3"/>
                             <constraint firstItem="VFS-xg-f4Z" firstAttribute="top" secondItem="XCe-7V-xeo" secondAttribute="bottom" constant="8" id="LkJ-bH-HQ7">
-                                <variation key="heightClass=regular-widthClass=compact" constant="3"/>
+                                <variation key="heightClass=regular-widthClass=compact" constant="43"/>
                             </constraint>
                             <constraint firstAttribute="trailing" secondItem="K5c-Uw-coe" secondAttribute="trailing" id="MR5-eX-xgR"/>
                             <constraint firstItem="zJM-9e-sC3" firstAttribute="centerX" secondItem="bec-18-6zT" secondAttribute="centerX" id="Zja-LD-udg"/>
                             <constraint firstItem="XCe-7V-xeo" firstAttribute="leading" secondItem="bec-18-6zT" secondAttribute="leading" id="h83-lZ-FFL"/>
                             <constraint firstItem="L0S-sa-JPw" firstAttribute="leading" secondItem="bec-18-6zT" secondAttribute="leading" id="lS0-mM-E06"/>
-                            <constraint firstItem="0CS-Ji-hVt" firstAttribute="top" secondItem="K5c-Uw-coe" secondAttribute="bottom" constant="3" id="mAC-Sn-GO6"/>
+                            <constraint firstItem="0CS-Ji-hVt" firstAttribute="top" secondItem="K5c-Uw-coe" secondAttribute="bottom" constant="3" id="mAC-Sn-GO6">
+                                <variation key="heightClass=regular-widthClass=compact" constant="44"/>
+                            </constraint>
                             <constraint firstItem="K5c-Uw-coe" firstAttribute="leading" secondItem="bec-18-6zT" secondAttribute="leading" id="mh0-bw-wWK"/>
                             <constraint firstAttribute="trailing" secondItem="XCe-7V-xeo" secondAttribute="trailing" id="rCy-13-YzV"/>
                             <constraint firstItem="L0S-sa-JPw" firstAttribute="top" secondItem="ENg-fY-TgE" secondAttribute="bottom" constant="8" id="sR4-Ia-VxL"/>
                             <constraint firstItem="cMA-k8-qNS" firstAttribute="top" secondItem="L0S-sa-JPw" secondAttribute="bottom" id="uWt-ty-FHQ"/>
-                            <constraint firstItem="0CS-Ji-hVt" firstAttribute="top" secondItem="zJM-9e-sC3" secondAttribute="bottom" constant="-169" id="uys-9m-FCV"/>
+                            <constraint firstItem="0CS-Ji-hVt" firstAttribute="top" secondItem="zJM-9e-sC3" secondAttribute="bottom" constant="-169" id="uys-9m-FCV">
+                                <variation key="heightClass=regular-widthClass=compact" constant="-128"/>
+                            </constraint>
                             <constraint firstItem="XCe-7V-xeo" firstAttribute="top" secondItem="zJM-9e-sC3" secondAttribute="bottom" constant="8" id="zEp-jN-QsE"/>
                         </constraints>
                         <variation key="default">
@@ -3019,7 +3065,7 @@
         <!--Login-->
         <scene sceneID="L43-hT-odc">
             <objects>
-                <viewController id="Xdc-bZ-kc3" customClass="LoginViewController" customModule="enHueco" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LoginViewController" id="Xdc-bZ-kc3" customClass="LoginViewController" customModule="enHueco" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="8B9-xb-Ogp"/>
                         <viewControllerLayoutGuide type="bottom" id="SAx-lx-qrk"/>
@@ -3249,7 +3295,7 @@
         <!--Navigation Controller-->
         <scene sceneID="O80-dD-1kv">
             <objects>
-                <navigationController id="EVy-Ep-XAz" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="MainNavigationController" id="EVy-Ep-XAz" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="o6W-w2-zw1">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
