--- a/enHueco/Views/Base.lproj/Main.storyboard
+++ b/enHueco/Views/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8187.4" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="EVy-Ep-XAz">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="15A282a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="EVy-Ep-XAz">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8151.3"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -1335,6 +1335,7 @@
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q3w-G8-chG">
                                         <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                        <animations/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="68" id="Lqr-vd-E0y"/>
                                             <constraint firstAttribute="height" constant="30" id="mur-Ce-8T9"/>
@@ -1377,10 +1378,10 @@
                                     </mask>
                                     <mask key="constraints">
                                         <exclude reference="68Q-7z-1rV"/>
-                                        <exclude reference="BJi-rk-SN2"/>
-                                        <exclude reference="H5W-nR-xAs"/>
                                         <exclude reference="Jd8-fQ-vUi"/>
                                         <exclude reference="k2g-fL-n67"/>
+                                        <exclude reference="BJi-rk-SN2"/>
+                                        <exclude reference="H5W-nR-xAs"/>
                                     </mask>
                                 </variation>
                                 <variation key="heightClass=regular-widthClass=compact">
@@ -1390,10 +1391,10 @@
                                     </mask>
                                     <mask key="constraints">
                                         <include reference="68Q-7z-1rV"/>
-                                        <include reference="BJi-rk-SN2"/>
-                                        <include reference="H5W-nR-xAs"/>
                                         <include reference="Jd8-fQ-vUi"/>
                                         <include reference="k2g-fL-n67"/>
+                                        <include reference="BJi-rk-SN2"/>
+                                        <include reference="H5W-nR-xAs"/>
                                     </mask>
                                 </variation>
                             </view>
